<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount</string>
    <string name="numOfPax">Num Of Pax</string>
    <string name="svsDisabled">SVS</string>
    <string name="svsEnabled">SVS</string>
    <string name="gstDisabled">GST</string>
    <string name="gstEnabled">GST</string>
    <string name="discount">Discount (%)</string>
    <string name="cash">Cash</string>
    <string name="payNow">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="totalBill">Total Bill:</string>
    <string name="eachPay">Each Pays: $</string>

</resources>